# iasinat

./: Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: binary_io.rs  cds_time.rs  consts.rs  convenience.rs  giadr_l1c.rs  giadr_l2.rs  grh.rs  lib.rs  mdr_l1c.rs  mdr_l2.rs  mphr.rs  nat.rs  read_bin.rs  spectral_radiance.rs  timestamp.rs  utils.rs
octave/: cmp_coda_1.m  cmp_coda_2.m
tool/: Cargo.toml  build.rs  foo.nc
tool/src/: cmp1c_netcdf.rs  cmp2_netcdf.rs  ell_fp.rs  ell_fp_mpk.rs  footprints.rs  list_recs.rs  main.rs  nat1c_to_netcdf.rs  nat2_to_netcdf.rs  netcdf_cmp.rs  seq.rs  show_mphr.rs  stats.rs  utils.rs
