[workspace]
resolver = "2"
members = ["lib","tool"]

[workspace.package]
version = "0.1.2"
edition = "2024"
authors = ["Berke DURAK <bd@exhrd.fr>"]
description = "Reader for IASI NAT L1C and L2 files"
repository = "https://github.com/ExH-R-D/iasinat"
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.98"
ndarray = "0.16.1"
regex = "1.11.1"
tofas = "0.2.11"
iasinat-lib = { path = "lib" }
log = "0.4.27"
