[package]
name = "iasinat-lib"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
ndarray = { workspace = true }
regex = { workspace = true }
tofas = { workspace = true }