[package]
name = "iasinat-tool"
edition = "2024"
version.workspace = true
authors.workspace = true

[dependencies]
iasinat-lib = { workspace = true }
anyhow = { workspace = true }
tofas = { workspace = true }
pico-args = "0.5.0"
simple_logger = { version = "5.0.0", default-features = false }
log = { workspace = true }
netcdf = { version = "0.11.0", default-features = false, features = ["ndarray"] }
ndarray.workspace = true

[build-dependencies]
anyhow = { workspace = true }

[[bin]]
name = "iasinat-tool"
path = "src/main.rs"
