[package]
name = "iasinat-tool"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
footprints = ["circfp"]
footprints-mpk = ["footprint","footprints"]

[dependencies]
# iasinat-lib = { workspace = true }
iasinat-lib = "0.1.2"
anyhow = { workspace = true }
tofas = { workspace = true }
pico-args = "0.5.0"
simple_logger = { version = "5.0.0", default-features = false }
log = { workspace = true }
netcdf = { version = "0.11.0", default-features = false, features = ["ndarray"] }
ndarray.workspace = true
circfp = { version = "0.2.0",optional = true }
footprint = { version = "0.2.3",optional = true }

[build-dependencies]
anyhow = { workspace = true }

[[bin]]
name = "iasinat-tool"
path = "src/main.rs"
